--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -16,7 +16,7 @@
 	"account.enhanced_model": "Enhanced model",
 	"account.full_name": "Name and surname",
 	"account.invalid_code": "Entered code is invalid.",
-	"account.invited_user": "We have sent an invitation email to <strong>{{user}}</strong> to join this account",
+	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
 	"account.knowledgeboxs": "Knowledge boxes",
 	"account.licence": "License",
 	"account.logo": "Box image",
@@ -413,7 +413,7 @@
 	"stash.home.recent_added": "New content",
 	"stash.home.tags.title": "Tag distribution representation",
 	"stash.home.tags.total": "total tags",
-	"stash.invited_user": "We have sent an invitation email to <strong>{{user}}</strong> to join this knowledge box. ",
+	"stash.invited_user": "We have sent an invitation email to {{user}} to join this knowledge box. ",
 	"stash.kb_name_invalid": "Invalid knowledge box name",
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Manage users",
