--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -16,7 +16,7 @@
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
 	"account.invalid_code": "El código introducido no es válido",
-	"account.invited_user": "Hemos enviado un correo a <strong>{{user}}</strong> invitándolo en esta cuenta",
+	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
 	"account.knowledgeboxs": "Cajas de conocimiento",
 	"account.licence": "Licencia",
 	"account.linked_email": "Correo electrónico vinculado a la cuenta",
@@ -377,7 +377,7 @@
 	"stash.home.recent_added": "Nuevos contenidos",
 	"stash.home.tags.title": "Gráfica de distribución de tags",
 	"stash.home.tags.total": "tags en total",
-	"stash.invited_user": "Hemos enviado un correo a <strong>{{user}}</strong> invitándolo en esta caja de conocimiento",
+	"stash.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta caja de conocimiento",
 	"stash.kb_name_invalid": "El nombre de la caja de conocimiento no es válido",
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gestionar usuarios",
