--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -18,7 +18,7 @@
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
 	"account.invalid_code": "El codi introduït no és vàlid.",
-	"account.invited_user": "L'usuari <strong>{{user}}</strong> ha rebut un correu amb una invitació a participar en aquest compte",
+	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
 	"account.knowledgeboxs": "Caixes de coneixement",
 	"account.licence": "Llicència",
 	"account.linked_email": "Correu electrònic vinculat al compte",
@@ -428,7 +428,7 @@
 	"stash.home.recent_added": "Continguts nous",
 	"stash.home.tags.title": "Gràfica de distribució de tags",
 	"stash.home.tags.total": "tags en total",
-	"stash.invited_user": "L'usuari <strong>{{user}}</strong> ha rebut un correu amb una invitació a participar a la caixa de coneixement",
+	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la caixa de coneixement",
 	"stash.kb_name_invalid": "El nom de la caixa de coneixement no és vàlid",
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
