[sc-1321] Resource searchbar improvements

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -25,6 +25,8 @@
 	"resource.language": "Idioma",
 	"resource.other": "Altres dades del recurs",
 	"resource.preview": "Previsualitzar",
+	"resource.relevance": "Rellevància",
+	"resource.sequential": "Seqüencial",
 	"resource.show-all": "Mostra tots els paràgrafs",
 	"resource.source": "Document d'origen",
 	"resource.summary": "Resum",
