--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -25,6 +25,8 @@
 	"resource.language": "Idioma",
 	"resource.other": "Otros datos del recurso",
 	"resource.preview": "Previsualitzar",
+	"resource.relevance": "Relevancia",
+	"resource.sequential": "Secuencial",
 	"resource.show-all": "Muestra todos los párrafos",
 	"resource.source": "Documento de origen",
 	"resource.summary": "Resumen",
