--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -34,7 +34,7 @@
 	"results.paragraphs": "Paràgrafes rellevants",
 	"results.semantic": "Frases rellevants",
 	"results.summary": "Resum",
-	"suggest.enter": "Premeu Enter ⏎ per veure els resultats",
-	"suggest.more": "Mostra més",
+	"suggest.enter": "Premeu Enter [] per veure els resultats",
+	"suggest.more": "Mostra més resultats",
 	"suggest.paragraphs": "Paràgraf suggerit"
 }
