--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -28,7 +28,6 @@
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
 	"account.manage_db": "Gestiona",
-	"account.manage_dbs": "Gestió dels comptes de Nuclia DB",
 	"account.new_code": "Nou codi",
 	"account.new_token": "Nou Token",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
@@ -77,6 +76,7 @@
 	"empty.body": "Sembla que no hem pogut trobar cap resultats que sigui prou rellevant. Si us plau, intenta-ho de nou. ",
 	"empty.title": "No hem trobat cap resultat :(",
 	"entities.law": "Legal",
+	"entities.quantity": "Quantitats i mesures",
 	"entity.add_description": "Afegeix una descripció més detallada",
 	"entity.add_short_description": "Afegeix un títol o línia de text descriptiva",
 	"entity.delete_entities_warning": "",
@@ -161,7 +161,7 @@
 	"generic.presence": "Presència",
 	"generic.previous": "Pàgina anterior",
 	"generic.profile": "Perfil",
-	"generic.reindex": "Reindexar",
+	"generic.reindex": "Enviar a re-entendre el fitxer",
 	"generic.relevance": "Rellevància",
 	"generic.report_bug": "Notificar un error",
 	"generic.reset": "",
