--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -25,7 +25,6 @@
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
 	"account.manage_db": "Manage",
-	"account.manage_dbs": "Nuclia DB management accounts",
 	"account.new_token": "New Token",
 	"account.related_kbs": "Account's Knowledge Boxes",
 	"account.renewal": "Processing consumption is renewed monthly",
@@ -72,6 +71,7 @@
 	"empty.body": "It seems we couldn't find any relevant results. Please, try again. ",
 	"empty.title": "We didn't find any result :(",
 	"entities.law": "Legal",
+	"entities.quantity": "Quantities and measures",
 	"entity.delete_entities_warning": "If you delete this insight it will disappear from all resources and search suggestions",
 	"entity.delete_entity": "Delete entity",
 	"entity.entity": "Entity",
@@ -151,7 +151,7 @@
 	"generic.presence": "Presence",
 	"generic.previous": "Previous page",
 	"generic.profile": "Profile",
-	"generic.reindex": "Reindex",
+	"generic.reindex": "Send again to reunderstand the file",
 	"generic.relevance": "Relevance",
 	"generic.report_bug": "Report a bug",
 	"generic.reset": "Reset",
