--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -26,7 +26,6 @@
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
 	"account.manage_db": "Gestiona",
-	"account.manage_dbs": "Gestión de las cuentas de Nuclia DB",
 	"account.new_code": "Nuevo código",
 	"account.new_token": "Nuevo Token",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
@@ -71,6 +70,7 @@
 	"empty.body": "Parece que no hemos podido encontrar ningún resultado lo suficientemente relevante. Por favor, vuelve a intentarlo",
 	"empty.title": "No hemos encontrado ningún resultado :(",
 	"entities.law": "Legal",
+	"entities.quantity": "Cantidades y medidas",
 	"entity.add_description": "Añade una descripción más detallada",
 	"entity.add_short_description": "Añade un título o línea de texto descriptiva",
 	"entity.delete_entity": "Eliminar la entidad",
@@ -148,7 +148,7 @@
 	"generic.presence": "Presencia",
 	"generic.previous": "Página anterior",
 	"generic.profile": "Perfil",
-	"generic.reindex": "Reindexar",
+	"generic.reindex": "Enviar a re-entender el fichero",
 	"generic.relevance": "Relevancia",
 	"generic.report_bug": "Notificar un error",
 	"generic.resource_list": "Listado de recursos",
