--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -26,6 +26,7 @@
 	"resource.other": "Otros datos del recurso",
 	"resource.preview": "Previsualitzar",
 	"resource.relevance": "Relevancia",
+	"resource.search": "",
 	"resource.sequential": "Secuencial",
 	"resource.show-all": "Muestra todos los párrafos",
 	"resource.source": "Documento de origen",
@@ -34,7 +35,7 @@
 	"results.paragraphs": "Párrafos relevantes",
 	"results.semantic": "Oraciones relevantes",
 	"results.summary": "Resumen",
-	"suggest.enter": "Presiona Entrar [] para ver los resultados",
+	"suggest.enter": "Presiona Entrar ⏎ para ver los resultados",
 	"suggest.more": "Mostrar más resultados",
 	"suggest.paragraphs": "Párrafo sugerido"
 }
