Recover interactive search

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -26,7 +26,7 @@
 	"resource.other": "Altres dades del recurs",
 	"resource.preview": "Previsualitzar",
 	"resource.relevance": "Rellevància",
-	"resource.search": "",
+	"resource.search": "Cerca",
 	"resource.sequential": "Seqüencial",
 	"resource.show-all": "Mostra tots els paràgrafs",
 	"resource.source": "Document d'origen",
