--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -26,7 +26,7 @@
 	"resource.other": "Otros datos del recurso",
 	"resource.preview": "Previsualitzar",
 	"resource.relevance": "Relevancia",
-	"resource.search": "",
+	"resource.search": "Busca",
 	"resource.sequential": "Secuencial",
 	"resource.show-all": "Muestra todos los párrafos",
 	"resource.source": "Documento de origen",
