fix NucliaDB account refresh [sc-1343]

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -27,7 +27,7 @@
 	"account.logotip": "Logotip",
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
-	"account.manage_db": "Gestiona",
+	"account.manage_dbs": "",
 	"account.new_code": "Nou codi",
 	"account.new_token": "Nou Token",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
