fallback to english when catalan translation is missing  [sc-1347]

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -5,8 +5,6 @@
 	"account.add_user": "Afegir usuari",
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
-	"account.back": "",
-	"account.characters": "",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
 	"account.create_db": "Crear un compte Nuclia DB",
@@ -27,14 +25,11 @@
 	"account.logotip": "Logotip",
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
-	"account.manage_dbs": "",
 	"account.new_code": "Nou codi",
 	"account.new_token": "Nou Token",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
-	"account.renewal": "",
 	"account.replace_config": "Reemplaçar configuració",
 	"account.settings": "Preferències de l’Account",
-	"account.speech_to_text": "",
 	"account.speech_to_text_description": "Nuclia ofereix models millorats de veu a text. L'ús d'aquests models requereix un càlcul més elevat i suposen un cost addicional. Marqueu la casella de selecció  si voleu utilitzar els models millorats.",
 	"account.stash.add": "Afegir caixa coneixement",
 	"account.stash.delete": "Borrar",
@@ -43,12 +38,10 @@
 	"account.stash.retire": "Moure a privat",
 	"account.stash.upgrade": "Incrementar màxim KB",
 	"account.stash.users": "Gestió d'usuaris",
-	"account.switch": "",
 	"account.title": "Nom del compte",
 	"account.title_help": "Nom del compte",
 	"account.token_description": "<strong>Important!</strong> Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"account.token_generation_warning": "Si generes un nou codi perdàs l’accés amb la clau actual",
-	"account.total": "",
 	"account.type.basic": "Compte Bàsic",
 	"account.type.kb": "Caixes de coneixement",
 	"account.type.manage": "Gestionar",
@@ -79,17 +72,15 @@
 	"entities.quantity": "Quantitats i mesures",
 	"entity.add_description": "Afegeix una descripció més detallada",
 	"entity.add_short_description": "Afegeix un títol o línia de text descriptiva",
-	"entity.delete_entities_warning": "",
 	"entity.delete_entity": "Eliminar l’entitat",
 	"entity.entity": "Entitat",
 	"entity.entity_name": "Nom de la name entity",
 	"entity.entity_search": "Cerca entitat",
-	"entity.name_entities_management": "",
 	"entity.new_entity": "Crea una nova entitat",
 	"entity.save_changes": "Guardar l’edició",
 	"entity.search_synonym": "Busca i selecciona el sinònim",
 	"entity.synonym": "Sinònim",
-	"entity.unlink_entity": "Desellaçar l’entitat. Es crearà una nova entitat no relacionada",
+	"entity.unlink_entity": "Desenllaçar l'entitat. Es crearà una nova entitat no relacionada",
 	"filter.filter_by_name_entities": "Filtrar per Name Entities",
 	"filter.filters_applied": "Filtres aplicats",
 	"filter.search_ontology": "Cerca l'Ontologia",
@@ -102,7 +93,6 @@
 	"generic.all": "Tots",
 	"generic.allow": "Permetre",
 	"generic.back": "Enrere",
-	"generic.back_to_accounts": "",
 	"generic.back_to_home": "Tornar a la Home",
 	"generic.by_relevance": "per rellevància",
 	"generic.cancel": "Cancel·lar",
@@ -123,13 +113,11 @@
 	"generic.delete": "Esborrar",
 	"generic.description": "Descripció",
 	"generic.deselect_all": "desseleccionar-ho tot",
-	"generic.disabled": "",
 	"generic.dismiss": "Tancar",
 	"generic.done": "Fet",
 	"generic.download": "Descarregar",
 	"generic.edit": "Editar",
 	"generic.email": "Correu electrònic",
-	"generic.enabled": "",
 	"generic.expand_info": "desplegar tota la informació",
 	"generic.find_it": "Troba'l",
 	"generic.go": "Accedir",
@@ -137,7 +125,6 @@
 	"generic.goToDetail": "Anar al recurs ",
 	"generic.help": "Ajuda",
 	"generic.iamsure": "Si, n'estic segur",
-	"generic.insights": "",
 	"generic.language": "Idioma",
 	"generic.link": "Enllaç",
 	"generic.logout": "Sortir",
@@ -164,7 +151,6 @@
 	"generic.reindex": "Enviar a re-entendre el fitxer",
 	"generic.relevance": "Rellevància",
 	"generic.report_bug": "Notificar un error",
-	"generic.reset": "",
 	"generic.resource_list": "Llistat de recursos",
 	"generic.restore": "Restablir",
 	"generic.result": "Resultat",
@@ -198,9 +184,7 @@
 	"language.es": "Espanyol",
 	"language.fr": "Francès",
 	"language.it": "Italià",
-	"link.create.error": "",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
-	"login.agree": "",
 	"login.check_email": "Comprova el teu correu!",
 	"login.continue_with": "Continua amb",
 	"login.create_one": "Crea'n un!",
@@ -232,7 +216,7 @@
 	"login.title": "Benvingut/da a Flaps",
 	"login.token_expired": "El token ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
-	"login.user_registered_as_external_user": "Ja existeix un usuari amb aquest correu electrònic. Si us plau, intenta entrar amb el teu compte de Google o Github.",
+	"login.user_registered_as_external_user": "Ja existeix un usuari amb aquest correu electrònic. Si us plau, intenta entrar amb el teu compte de Google.",
 	"login.validate_and_explore": "Verifica el compte i comença a explorar",
 	"modal.create_link.input": "Escriu o enganxa l’enllaç",
 	"modal.create_link.link_duplicated": "Existeix un enllaç idèntic a la caixa de coneixement",
@@ -252,10 +236,8 @@
 	"ontology.add_ontology": "Afegir etiqueta",
 	"ontology.customize_classification": "Personalitza la classificació.",
 	"ontology.delete_warning": "Si elimines aquesta família d'etiquetes, perdràs tota la classificació existent",
-	"ontology.delete_warning_extra": "",
 	"ontology.duplicated_label": "Ja existeix una etiqueta amb el nom <strong>{{title}}</strong>",
 	"ontology.invalid_name": "El nom de l'etiqueta no és vàlid",
-	"ontology.label_classification": "",
 	"ontology.manage_labels": "Afegeix, anomena i ordena les etiquetes que formen part d’aquesta família d'etiquetes",
 	"ontology.ontology_name": "Nom de la família d'etiquetes",
 	"ontology.sort_alphabetically": "Ordenar Alfabèticament",
@@ -270,23 +252,9 @@
 	"profile.password_changed": "S'ha modificat la contrasenya",
 	"profile.repeat_password": "Repeteix la contrasenya",
 	"profile.select_language": "Selecciona l’idioma preferent",
-	"quickstart.become_master": "",
-	"quickstart.complete_steps": "",
 	"quickstart.completed_tasks": "Tasques completades",
-	"quickstart.go": "",
 	"quickstart.pending_tasks": "Tasques pendents",
 	"quickstart.remaining_tasks": "{{num}} Tasques restants",
-	"quickstart.task1.title": "",
-	"quickstart.task2.title": "",
-	"quickstart.task3.title": "",
-	"quickstart.task4.description": "",
-	"quickstart.task4.title": "",
-	"quickstart.task5.description": "",
-	"quickstart.task5.title": "",
-	"quickstart.task6.description": "",
-	"quickstart.task6.title": "",
-	"quickstart.task7.description": "",
-	"quickstart.task7.title": "",
 	"quickstart.title": "Inici ràpid",
 	"recover.description": "Escriu la teva direcció electrònica i segueix les indicacions per a recuperar la contrasenya ",
 	"recover.gologin": "Vés a la pàgina de login",
@@ -299,7 +267,6 @@
 	"reset.password_reset": "S'ha restaurat la contrasenya",
 	"reset.title": "Crear contrasenya",
 	"resource.access_source_file": "Accedir al document d'origen",
-	"resource.authorship": "",
 	"resource.back_to_results": "Tornar als resultats",
 	"resource.classification": "Classificació",
 	"resource.close_preview": "Tancar previsualització",
@@ -329,14 +296,12 @@
 	"resource.entities.time": "Temps",
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
-	"resource.file": "",
 	"resource.file.creator": "Creador",
 	"resource.file.metadata.title": "Metadades del recurs",
 	"resource.file_creation_date": "Data de creació del fitxer",
 	"resource.hidehighlight": "Elimina el ressaltat",
 	"resource.inception.title": "Elements trobats",
 	"resource.language": "Idioma",
-	"resource.link": "",
 	"resource.name_entities": "Informació clau",
 	"resource.non_editable_data": "Dades no editables",
 	"resource.ocr.title": "OCR",
@@ -344,9 +309,7 @@
 	"resource.page.upload_image": "Puja una imatge descriptiva del recurs",
 	"resource.paragraph.help": "Cerca",
 	"resource.paragraph.search": "Cerca per paràgraf",
-	"resource.password": "",
 	"resource.pdf.help": "Cerca",
-	"resource.profile": "",
 	"resource.reference_image": "Imatge de referència",
 	"resource.resource_edit": "Edició del recurs",
 	"resource.resource_number": "{{num}} recursos",
@@ -363,11 +326,8 @@
 	"resource.source_file": "Document d'origen",
 	"resource.status": "Estat",
 	"resource.summary": "Resum",
-	"resource.summary.help": "",
 	"resource.text": "Text",
 	"resource.textplaceholder": "Escriu aquí ",
-	"resource.thumbnail": "",
-	"resource.thumbnail.help": "",
 	"resource.title": "Títol",
 	"resource.title_id": "Títol / ID",
 	"resource.total": "Total",
@@ -382,7 +342,6 @@
 	"search.title.other_results": "Altres resultats",
 	"search.title.results": "Resultats propers",
 	"search.title.semanticresults": "Resultat semàntic",
-	"search.top_insights": "",
 	"search.type_of_document": "Tipus de document",
 	"search.type_of_results": "Tipus de resultats",
 	"searchbar.help": "Cerca ",
@@ -400,21 +359,11 @@
 	"setup.watch_tutorial": "Aprofita aquests minuts per veure un vídeo tutorial i aprendre com funciona Nuclia",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
-	"stash.contact_admin": "",
 	"stash.create": "Crea una caixa de coneixement",
-	"stash.create.anonymization": "",
-	"stash.create.anonymization-help": "",
-	"stash.create.anonymization-warning": "",
 	"stash.create.error": "Error en crear el quadre de coneixement",
-	"stash.create.language.mono": "",
-	"stash.create.language.mono-help": "",
-	"stash.create.language.multi": "",
-	"stash.create.languages": "",
-	"stash.create.languages-help": "",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
 	"stash.create_service_access": "Crea un nou Service Access",
 	"stash.delete.delete": "Eliminar caixa de coneixement",
-	"stash.delete.error": "",
 	"stash.delete.warning": "Si borres la Caixa de Coneixement {{ kb }} també s'esborraran totes les dades que conté.",
 	"stash.delete_stash": "Eliminar caixa de coneixement",
 	"stash.delete_stash_data": "Elimina la caixa de coneixament i totes les dades que conté",
@@ -433,18 +382,14 @@
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
 	"stash.name": "Nom de la Caixa",
-	"stash.name_your_kb": "",
 	"stash.new_service_access_token": "Crear un nou token",
-	"stash.no_knowledge_boxes": "",
 	"stash.preferences.receive_help": "Rebre ajuda",
 	"stash.preferences.receiving_emails": "Preferències del correu electrònic",
 	"stash.profile": "Perfil de la caixa",
 	"stash.publish.confirm": "Publicar la caixa de coneixement significa que es farà pública i serà accessible per qualsevol persona del món. També podrà ser indexada pels cercadors públics tipus Google. ",
-	"stash.publish.error": "",
 	"stash.publish.publish": "Fer pública la Caixa de Coneixement",
 	"stash.publish.title": "Publicar la caixa de coneixement",
 	"stash.publish.warning": "Si publiques la Caixa de Coneixement {{ kb }} faràs pública tota la informació que conté.",
-	"stash.retire.error": "",
 	"stash.retire.retire": "Fer privada la Caixa de Coneixment ",
 	"stash.retire.warning": "Si despubliques la Caixa de Coneixement {{ kb }} fas privada tota la informació que conté.",
 	"stash.search_users": "Afegir un nou usuari",
@@ -457,7 +402,6 @@
 	"stash.service_access_description": "Important! Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"stash.settings": "Preferències de la caixa de coneixament",
 	"stash.side.activity": "Registre d'activitat",
-	"stash.side.api_keys": "",
 	"stash.side.audit": "Auditoria",
 	"stash.side.create": "Creació de contingut",
 	"stash.side.entities": "Conceptes clau",
@@ -479,8 +423,6 @@
 	"stash.side.widgets": "Widgets",
 	"stash.side.working": "Processos",
 	"stash.state": "Estat",
-	"stash.state.private": "",
-	"stash.state.published": "",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
 	"stash.top_insights_description": "Escull les quatre entitats més essencials disponibles al menú de filtres",
@@ -493,69 +435,18 @@
 	"stash.valid_emails_label": "Correus electrònics",
 	"stash.view_edit_service_access": "Visualitza / Edita els Service Access existents",
 	"stash.widgets": "Widgets",
-	"stash.widgets.add": "",
-	"stash.widgets.add-help": "",
-	"stash.widgets.invalid-id": "",
-	"stash.widgets.mode": "",
-	"stash.widgets.mode.button": "",
-	"stash.widgets.mode.form": "",
-	"stash.widgets.mode.input": "",
-	"stash.widgets.preferences": "",
-	"stash.widgets.preview": "",
-	"stash.widgets.rename": "",
-	"stash.widgets.rename-title": "",
-	"stash.widgets.snippet": "",
-	"stash.widgets.style": "",
-	"stash.widgets.title": "",
-	"stats.endpoint": "",
 	"stats.get_started": "Començar",
-	"stats.processing_time": "",
-	"stats.total.fields": "",
-	"stats.total.paragraphs": "",
-	"stats.total.sentences": "",
 	"stats.total.title": "Nombre total de recursos",
-	"stats.total_search": "",
 	"tasks.credits.title": "Cicles disponibles",
 	"tasks.credits.upgrade": "Adquirir més cicles",
-	"toast.error": "",
-	"toast.information": "",
-	"toast.success": "",
-	"toast.warning": "",
-	"tour.step1.content": "",
-	"tour.step1.title": "",
-	"tour.step10.content": "",
-	"tour.step10.title": "",
-	"tour.step11.content": "",
-	"tour.step11.title": "",
-	"tour.step2.content": "",
-	"tour.step2.title": "",
-	"tour.step3.content": "",
-	"tour.step3.title": "",
-	"tour.step4.content": "",
-	"tour.step4.title": "",
-	"tour.step5.content": "",
-	"tour.step5.title": "",
-	"tour.step6.content": "",
-	"tour.step6.title": "",
-	"tour.step7.content": "",
-	"tour.step7.title": "",
-	"tour.step8.content": "",
-	"tour.step8.title": "",
-	"tour.step9.content": "",
-	"tour.step9.title": "",
 	"upload.audio_detected": "El teu fitxer conté un audio.",
 	"upload.audios_detected": "Hem detectat arxius d’audio. Per a continuar, selecciona l’arxiu i el seu idioma.",
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
-	"upload.progress.complete": "",
-	"upload.progress.conflicts": "",
-	"upload.progress.failed": "",
-	"upload.progress.uploaded": "",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
-	"upload.uploading_files": "",
 	"upload.uploading_queue": "Cua de pujades",
 	"user.logout": "Sortir",
 	"validation.email": "Introdueix un correu electrònic vàlid",
@@ -566,6 +457,5 @@
 	"validation.password_required": "Introdueix la contrasenya",
 	"validation.required": "Aquest camp és obligatori",
 	"validation.title_required": "Introdueix el títol",
-	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)",
-	"widget.show-api": ""
+	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)"
 }
