--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -11,20 +11,24 @@
 	"account.config": "Account settings",
 	"account.create_db": "Create a Nuclia DB account",
 	"account.create_new_db": "Create a new Nuclia DB account",
+	"account.db_zone_description": "Please, select the zone and the processing provider you would like to use for this account (default to the account's zone)",
 	"account.delete_user_warning": "Are you sure to delete this user?",
 	"account.edit_db": "Edit Nuclia DB account",
 	"account.enhanced_model": "Enhanced model",
 	"account.full_name": "Name and surname",
+	"account.generate_key": "",
 	"account.invalid_code": "Entered code is invalid.",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
 	"account.knowledgeboxs": "Knowledge boxes",
 	"account.licence": "License",
+	"account.linked_email": "Email linked to account",
 	"account.logo": "Box image",
 	"account.logo_description": "Select and upload an image",
 	"account.logotip": "Logo",
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
 	"account.manage_dbs": "Nuclia undestanding API keys",
+	"account.new_code": "",
 	"account.new_token": "New Token",
 	"account.related_kbs": "Account's Knowledge Boxes",
 	"account.renewal": "Processing consumption is renewed monthly",
@@ -43,6 +47,7 @@
 	"account.title": "Account name",
 	"account.title_help": "Account name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
+	"account.token_generation_warning": "",
 	"account.total": "State: <strong>{{total}}</strong> Knowledge Box, <strong>{{public}}</strong> public",
 	"account.type.basic": "Basic Account",
 	"account.type.kb": "Knowledge box",
@@ -72,6 +77,8 @@
 	"empty.title": "We didn't find any result :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Quantities and measures",
+	"entity.add_description": "",
+	"entity.add_short_description": "",
 	"entity.delete_entities_warning": "If you delete this insight it will disappear from all resources and search suggestions",
 	"entity.delete_entity": "Delete entity",
 	"entity.entity": "Entity",
@@ -80,7 +87,9 @@
 	"entity.name_entities_management": "Name entities management",
 	"entity.new_entity": "Create a new entity",
 	"entity.save_changes": "Save changes",
+	"entity.search_synonym": "Search and select the synonym",
 	"entity.synonym": "Synonyms",
+	"entity.unlink_entity": "Unlink entity. A new unrelated entity will be created",
 	"filter.filter_by_name_entities": "Filter by Name Entities",
 	"filter.filters_applied": "Filters applied",
 	"filter.search_ontology": "Search the ontology ",
@@ -210,6 +219,7 @@
 	"login.gogetflaps": "Discover more & sign up!",
 	"login.have_account": "Don’t have an account?",
 	"login.join_expedition": "Build your AI-powered search in minutes",
+	"login.local_user_already_exists": "A user with this email already exists. To log in, please enter your password.",
 	"login.login": "Log in",
 	"login.password": "Password",
 	"login.privacy_policy": "Privacy Policy",
@@ -222,6 +232,7 @@
 	"login.title": "Welcome to Flaps",
 	"login.token_expired": "Token has expired",
 	"login.try_again": "Please try again or reset your password below.",
+	"login.user_registered_as_external_user": "A user with this email already exists. Please try to sign in with your Google Account.",
 	"login.validate_and_explore": "Please, verify your account before start exploring",
 	"modal.create_link.input": "Write or paste the link",
 	"modal.create_link.link_duplicated": "There is an identical link in the knowledge box",
@@ -380,8 +391,11 @@
 	"setup.knowledge_box_creation": "We will create a Knowledge Box using your account's name. It will be used to initially store your data. Data will be processed in the zone you select.",
 	"setup.name_account": "Name your Account",
 	"setup.name_account_placeholder": "Name the account",
+	"setup.process_completed": "",
+	"setup.processing_file": "",
 	"setup.set_password": "Set your password",
 	"setup.soon_more_areas": "Soon more areas to choose from",
+	"setup.upload_document": "",
 	"setup.upload_file": "Upload your file",
 	"setup.watch_tutorial": "Take advantage of these minutes to watch a video tutorial and learn how Nuclia work",
 	"stash.add_user": "Add user",
@@ -534,6 +548,7 @@
 	"upload.check_files": "Check files status",
 	"upload.completed": "completed",
 	"upload.invalid_image": "Selected file is not a valid image",
+	"upload.once_uploaded": "",
 	"upload.progress.complete": "Upload complete",
 	"upload.progress.conflicts": "Conflicts",
 	"upload.progress.failed": "Failed",
