--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -80,6 +80,7 @@
 	"entity.save_changes": "Guarda la edición",
 	"entity.search_synonym": "Busca y selecciona el sinónimo",
 	"entity.synonym": "Sinónimo",
+	"entity.unlink_entity": "Desenlazar la entidad. Se creará una nueva entidad no relacionada",
 	"filter.filter_by_name_entities": "Filtrar por Name Entities",
 	"filter.filters_applied": "Filtros aplicados",
 	"filter.search_ontology": "Busca la Ontología",
@@ -215,7 +216,7 @@
 	"login.title": "Bienvenido/a a Flaps",
 	"login.token_expired": "El token ha caducado",
 	"login.try_again": "Vuelva a intentarlo o recupera la contraseña.",
-	"login.user_registered_as_external_user": "Ya existe un usuario con ese correo electrónico. Por favor, trate de entrar con su cuenta de Google o Github.",
+	"login.user_registered_as_external_user": "Ya existe un usuario con ese correo electrónico. Por favor, trate de entrar con su cuenta de Google.",
 	"login.validate_and_explore": "Verifica la cuenta y empieza a explorar ",
 	"modal.create_link.input": "Escribe o pega el enlace",
 	"modal.create_link.link_duplicated": "Hay un enlace idéntico en la caja de conocimiento.",
