change widget styles [sc-1353]

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -1,5 +1,5 @@
 {
-	"button.label": "",
+	"button.label": "Cercar amb",
 	"entities.date": "Dates",
 	"entities.event": "Esdeveniments",
 	"entities.fac": "Construccions",
