--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -1,5 +1,5 @@
 {
-	"button.label": "",
+	"button.label": "Buscar con",
 	"entities.date": "Fechas",
 	"entities.event": "Eventos",
 	"entities.fac": "Construcciones",
