entity page improvements  [sc-1368]

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -318,6 +318,7 @@
 	"resource.entities.fac": "Constructions",
 	"resource.entities.gpe": "Locations",
 	"resource.entities.language": "Languages",
+	"resource.entities.law": "Legal",
 	"resource.entities.loc": "Geography",
 	"resource.entities.mail": "Emails",
 	"resource.entities.money": "Money",
@@ -326,6 +327,7 @@
 	"resource.entities.percent": "Percentage",
 	"resource.entities.person": "People",
 	"resource.entities.product": "Products",
+	"resource.entities.quantity": "Quantity",
 	"resource.entities.time": "Time",
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
