--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -285,6 +285,7 @@
 	"resource.entities.fac": "Construcciones",
 	"resource.entities.gpe": "Localidades",
 	"resource.entities.language": "Idiomas",
+	"resource.entities.law": "Legal",
 	"resource.entities.loc": "Geografía",
 	"resource.entities.mail": "Emails",
 	"resource.entities.money": "Dinero",
@@ -293,6 +294,7 @@
 	"resource.entities.percent": "Porcentaje",
 	"resource.entities.person": "Gente",
 	"resource.entities.product": "Productos",
+	"resource.entities.quantity": "Cantidad",
 	"resource.entities.time": "Tiempo",
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
