--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -5,6 +5,7 @@
 	"entities.fac": "Construccions",
 	"entities.gpe": "Localitats",
 	"entities.language": "Idiomes",
+	"entities.legal": "Legal",
 	"entities.loc": "Geografia",
 	"entities.mail": "Emails",
 	"entities.money": "Diners",
@@ -13,6 +14,7 @@
 	"entities.percent": "Percentatge",
 	"entities.person": "Persones",
 	"entities.product": "Productes",
+	"entities.quantity": "Quantitat",
 	"entities.time": "Temps",
 	"entities.title": "Insights",
 	"entities.work_of_art": "Obres",
