--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -6,6 +6,7 @@
 	"entities.gpe": "Locations",
 	"entities.language": "Languages",
 	"entities.loc": "Geography",
+	"entities.law": "Legal",
 	"entities.mail": "Emails",
 	"entities.money": "Money",
 	"entities.norp": "Nationalities",
@@ -13,6 +14,7 @@
 	"entities.percent": "Percentage",
 	"entities.person": "Person",
 	"entities.product": "Products",
+	"entities.quantity": "Quantity",
 	"entities.time": "Time",
 	"entities.title": "Insights",
 	"entities.work_of_art": "Art",
