--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -5,6 +5,7 @@
 	"entities.fac": "Construcciones",
 	"entities.gpe": "Localidades",
 	"entities.language": "Idiomas",
+	"entities.law": "Legal",
 	"entities.loc": "Geografía",
 	"entities.mail": "Emails",
 	"entities.money": "Dinero",
@@ -13,6 +14,7 @@
 	"entities.percent": "Porcentaje",
 	"entities.person": "Personas",
 	"entities.product": "Productos",
+	"entities.quantity": "Cantidad",
 	"entities.time": "Tiempo",
 	"entities.title": "Insights",
 	"entities.work_of_art": "Obras",
