--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -5,6 +5,7 @@
 	"entities.fac": "Constructions",
 	"entities.gpe": "Lieux",
 	"entities.language": "Langages",
+	"entities.law": "",
 	"entities.loc": "Géographie",
 	"entities.mail": "Emails",
 	"entities.money": "Montants",
@@ -13,6 +14,7 @@
 	"entities.percent": "Pourcentage",
 	"entities.person": "Personnes",
 	"entities.product": "Produits",
+	"entities.quantity": "",
 	"entities.time": "Temps",
 	"entities.title": "Insights",
 	"entities.work_of_art": "Œuvres",
