--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -285,6 +285,7 @@
 	"resource.entities.fac": "Construccions",
 	"resource.entities.gpe": "Localitats",
 	"resource.entities.language": "Idiomes",
+	"resource.entities.law": "Legal",
 	"resource.entities.loc": "Geografia",
 	"resource.entities.mail": "Emails",
 	"resource.entities.money": "Diners",
@@ -293,6 +294,7 @@
 	"resource.entities.percent": "Percentatge",
 	"resource.entities.person": "Gent",
 	"resource.entities.product": "Productes",
+	"resource.entities.quantity": "Quantitat",
 	"resource.entities.time": "Temps",
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
